# axochat_server

./: .gitignore  Cargo.toml  rust-toolchain.toml
src/: auth.rs  config.rs  error.rs  main.rs  moderation.rs
src/chat/: id.rs  mod.rs  session.rs
src/chat/handler/: ban.rs  count.rs  jwt.rs  message.rs  mojang.rs
