[package]
name = "axochat"
version = "0.10.0"
authors = ["frozolotl <frozolotl@protonmail.com>"]
edition = "2024"
license = "MIT"

[features]
default = ["rustls-tls"]
rustls-tls = ["dep:rustls", "dep:rustls-pemfile", "actix-web/rustls"]
openssl-tls = ["dep:openssl", "actix-web/openssl"]

[dependencies]
log = "0.4"
env_logger = "0.11"
structopt = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
humantime = "2.2"
rand = "0.9"
rand_hc = "0.4"
uuid = { version = "1.16", features = ["serde"] }
derive_more = "2.0"
snafu = "0.8"


# Updated web framework and related dependencies
actix-web = { version = "4.3", features = ["cookies"] }
actix-web-actors = "4.3"
actix = "0.13"
futures = "0.3"


# Authentication
jsonwebtoken = "9.3"
ring = "0.17"

# TLS support
rustls-pemfile = { version = "2.2", optional = true }
rustls = { version = "0.23", optional = true }
openssl = { version = "0.10", features = ["v111"], optional = true }

# Url
url = "2.5"
awc = "3.7"
